# ant-project-c-

./: .clangformat  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: cmake.yml
cmake/: clang_format.cmake  compiler_options.cmake  cpack.cmake  cppcheck.cmake  dependencies.cmake
project/: CMakeLists.txt
project/app/: CMakeLists.txt
project/app/src/: app.cpp
project/lib/model/: CMakeLists.txt
project/lib/model/include/: Simulator.h
project/lib/model/include/action/: AntAction.h  Move.h  Procreate.h  SimulatorSequencer.h
project/lib/model/include/ant/: Ant.h  AntQueen.h  AntScout.h  AntSoldier.h  AntWorker.h
project/lib/model/include/ant/state/: AdultState.h  AntState.h  DeadState.h  LarvaState.h  MinorState.h
project/lib/model/include/clock/: Clock.h  TimedElement.h
project/lib/model/include/world/: AntWorldMap.h  Direction.h  Pheromone.h  RandomMapFactory.h  Tile.h  WorldMap.h  WorldMapFactory.h  WorldMapRandom.h  WorldMapTile.h
project/lib/model/include/world/object/: Colony.h  Food.h  Object.h  Rock.h  Void.h
project/lib/model/src/: Simulator.cpp
project/lib/model/src/action/: Move.cpp  Procreate.cpp  SimulatorSequencer.cpp
project/lib/model/src/ant/: Ant.cpp  AntQueen.cpp  AntScout.cpp  AntSoldier.cpp  AntWorker.cpp
project/lib/model/src/ant/state/: AdultState.cpp  DeadState.cpp  LarvaState.cpp  MinorState.cpp
project/lib/model/src/clock/: Clock.cpp
project/lib/model/src/world/: AntWorldMap.cpp  Pheromone.cpp  RandomMapFactory.cpp  Tile.cpp  WorldMapRandom.cpp  WorldMapTile.cpp
project/lib/model/src/world/object/: Colony.cpp  Food.cpp  Rock.cpp  Void.cpp
project/lib/presenter/: CMakeLists.txt
project/lib/presenter/include/: AntApiPresenter.h  ApiAntSimulation.h  test.hpp
project/lib/presenter/src/: AntApiPresenter.cpp  ApiAntSimulation.cpp  test.cpp
src/app/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/presenter/: CMakeLists.txt
uml/: action.puml  ant.puml  clock.puml  mapGeneration.puml  presenter.puml  world.puml
